fixed projects alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,7 +56,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
-  padding: 20px; }
+  padding: 20px;
+  justify-content: center; }
 
 .main-btn {
   border: none;
